# JESMMO

./: .gitattributes  .gitignore  Cargo.toml  MMO.md  phase1.md  start_servers.ps1  stop_servers.ps1  terrain.toml
.claude/: settings.json
.github/workflows/: rust-tests.yml
artifacts/world_v1/: manifest.toml
artifacts/world_v2/: manifest.toml
artifacts/world_v3/: manifest.toml
client/: admin.html  client.html  test_client.py
client_godot/: .gitignore  Main.gd  Main.gd.uid  Main.tscn  README.md  play.bat  project.godot  terrain_editor.bat
client_godot/config/editor/: brushes.cfg
client_godot/editor/: BrushController.gd  BrushController.gd.uid  DemolishTool.gd  DemolishTool.gd.uid  EditorCamera.gd  EditorCamera.gd.uid  EditorToolbar.gd  EditorToolbar.gd.uid  HistoryPanel.gd  HistoryPanel.gd.uid  ObjectTool.gd  ObjectTool.gd.uid  RoadTool.gd  RoadTool.gd.uid
client_godot/net/: NetworkClient.gd  NetworkClient.gd.uid  Protocol.gd  Protocol.gd.uid
client_godot/player/: LocalPlayer.gd  LocalPlayer.gd.uid
client_godot/tests/: smoke.gd  smoke.gd.uid  smoke_build.gd  smoke_build.gd.uid  smoke_buildplace.gd  smoke_buildplace.gd.uid  smoke_district_tile_follows_terrain.gd  smoke_editor_brush.gd  smoke_editor_brush.gd.uid  smoke_editor_history.gd  smoke_editor_history.gd.uid  smoke_editor_live.gd  smoke_editor_live.gd.uid  smoke_editor_toolbar.gd  smoke_editor_toolbar.gd.uid  smoke_editor_undo_live.gd  smoke_editor_undo_live.gd.uid  smoke_editor_visual.gd  smoke_editor_visual.gd.uid  smoke_gather.gd  smoke_gather.gd.uid  smoke_ground_paint_follows_safety.gd  smoke_ground_paint_follows_safety.gd.uid  smoke_ground_paint_river.gd  smoke_ground_paint_river.gd.uid  smoke_hotbar.gd  smoke_hotbar.gd.uid  smoke_ingame_visual.gd  smoke_ingame_visual.gd.uid  smoke_milton_road.gd  smoke_milton_road.gd.uid  smoke_minimap.gd  smoke_minimap.gd.uid  smoke_movement.gd  smoke_movement.gd.uid  smoke_npc.gd  smoke_objects.gd  smoke_objects.gd.uid  smoke_objects_live.gd  smoke_objects_live.gd.uid  (+36 more)
client_godot/ui/: Build.gd  Build.gd.uid  BuildPlace.gd  BuildPlace.gd.uid  Craft.gd  Craft.gd.uid  DistrictTransition.gd  DistrictTransition.gd.uid  DraggableItem.gd  DraggableItem.gd.uid  Hotbar.gd  Hotbar.gd.uid  Hud.gd  Hud.gd.uid  Inventory.gd  Inventory.gd.uid  ItemDropZone.gd  ItemDropZone.gd.uid  Login.gd  Login.gd.uid  MayorRoad.gd  MayorRoad.gd.uid  Minimap.gd  Minimap.gd.uid  NpcDialogue.gd  NpcDialogue.gd.uid  Rent.gd  Rent.gd.uid  Skills.gd  Skills.gd.uid  Storage.gd  Storage.gd.uid  Vitals.gd  Vitals.gd.uid
client_godot/world/: EntityManager.gd  EntityManager.gd.uid  GroundPaint.gd  GroundPaint.gd.uid  TerrainStreamer.gd  TerrainStreamer.gd.uid  World.gd  World.gd.uid  WorldObjects.gd  WorldObjects.gd.uid  water.gdshader  water.gdshader.uid
dem_data/: brisbane_capital_25m.grid
docs/: protocol.md
rust_server/: .gitignore  Cargo.toml  README.md
rust_server/migrations/: 0001_init.sql  0002_gameplay_schema.sql  0003_build_contribution.sql  0004_skill_gated_orders.sql  0005_home_structures.sql  0006_rent_economy.sql  0007_mayor_role.sql  0008_build_order_placement.sql  0009_terrain_deltas.sql  0010_terrain_edit_ops.sql  0011_world_objects.sql  0012_road_orders.sql  0013_equipment.sql
rust_server/src/: auth.rs  lib.rs  protocol.rs  util.rs  world.rs
rust_server/src/persistence/: mod.rs
scripts/: seed_milton_road.py  seed_poison_pen.py
server/: proxy.py  requirements.txt  zoneServer.py
terrain-bake/: Cargo.toml  README.md
terrain-bake/src/: cache.rs  classify.rs  config.rs  detail.rs  dump.rs  erosion.rs  export.rs  grid.rs  hash.rs  ingest.rs  lib.rs  main.rs  stylize.rs  synth.rs  water.rs
terrain-bake/testdata/: brisbane_demo.toml  brisbane_hills_demo.grid
terrain-bake/tests/: pipeline_validation.rs
terrain-bake/tools/: convert_dem.py
terrain-common/: Cargo.toml
terrain-common/src/: delta.rs  lib.rs  manifest.rs  sampler.rs  tile.rs
